# TerminalRenderer

./: .gitignore  README.md  cli.py  multi_terminal_player.py  open_four_alacritty.sh  pyproject.toml
example/: shader.py
example/shaders/: plasma.frag
src/: multi_pane.py
