[project]
name = "terminal-renderer"
version = "0.1.0"
description = "High-performance terminal video renderer using PyTorch and Triton"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glcontext>=3.0.0",
    "opencv-python>=4.12.0.88",
    "moderngl>=5.12.0",
    "torch>=2.9.1",
    "triton>=3.5.1",
    "numpy>=2.2.6",
    "image>=1.5.33",
]

[project.scripts]
terminal-renderer-demo = "cli:main"
